<resources>
    <string name="app_name">Planezy Trial</string>
    <string name="slide1_desc">pic1</string>
    <string name="slide2_desc">pic2</string>
    <string name="slide3_desc">pic3</string>
    <string name="buttonstart">START</string>
    <string name="buttonnext">NEXT</string>
    <string name="buttonskip">SKIP</string>
    <string name="logintext">LOG IN</string>
    <string name="signuptext">SIGN UP</string>

    <!-- Strings related to login and signup-->
    <string name="title_activity_login">User Login</string>
    <string name="title_activity_signup">User SignUp</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Name</string>
    <string name="prompt_phonenumber">Phone Number</string>
    <string name="prompt_confirmpassword">Confirm Password</string>
    <string name="error_invalid_username">Username is required</string>
    <string name="error_invalid_email">Invalid Email Address</string>
    <string name="error_invalid_phonenumber">Invalid Phone Number</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="facebook_app_id">1935218310095080</string>
    <string name="fb_login_protocol_scheme">fb1935218310095080</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_image_listing">ImageListing</string>
</resources>
