<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fillViewport="false"
    >
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.developer.gavinejoyce.wedding.SignupActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:textColorHint="@android:color/holo_red_dark"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:errorTextAppearance="@style/error_appearance">

    <EditText
        android:id="@+id/username"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/prompt_username"
        android:textColorHint="@android:color/holo_red_dark"
        />
</android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/holo_red_dark"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/layout_username"
        android:layout_marginTop="20dp"
        app:errorTextAppearance="@style/error_appearance">

    <EditText
        android:id="@+id/emailid"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:textColorHint="@android:color/holo_red_dark"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_phonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/holo_red_dark"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/layout_email"
        android:layout_marginTop="20dp"
        app:errorTextAppearance="@style/error_appearance">

        <EditText
            android:id="@+id/phone"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="10"
            android:ems="10"
            android:hint="@string/prompt_phonenumber"
            android:textColorHint="@android:color/holo_red_dark"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/holo_red_dark"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/layout_phonenumber"
        android:layout_marginTop="20dp"
        app:errorTextAppearance="@style/error_appearance">

    <EditText
        android:id="@+id/password"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="20"
        android:hint="@string/prompt_password"
        android:textColorHint="@android:color/holo_red_dark"
         />

    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/layout_password"
        android:layout_marginTop="20dp"
        android:hint="@string/prompt_confirmpassword"
        android:textColorHint="@android:color/holo_red_dark"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        android:text="@string/signuptext"
        android:clickable="true"
        android:onClick="SignupSubmission"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/confirm_password"
        android:layout_marginTop="25dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        app:srcCompat="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="nothing"/>

</RelativeLayout>
    </ScrollView>