<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fillViewport="false"
    >

<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.developer.gavinejoyce.wedding.LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:textColorHint="@android:color/holo_red_dark"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/emailid"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
             />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/holo_red_dark"
        android:layout_below="@+id/layout_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp">

    <EditText
        android:id="@+id/password"
        android:hint="@string/prompt_password"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="textPassword"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/emailid"
        android:layout_alignStart="@+id/emailid" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_password"
        android:background="@android:color/holo_green_dark"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:clickable="true"
        android:onClick="LoginSubmission"
        android:text="@string/logintext" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        app:srcCompat="@drawable/logo" />

</RelativeLayout>

</ScrollView>